--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.center{
+  display:flex;
+  justify-content:center;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -22,6 +27,14 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.particles{
+  position: fixed;
+  top:0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .App-link {
